Pewa info added

--- a/pewa/pewa.html
+++ b/pewa/pewa.html
@@ -32,8 +32,11 @@
 <body>
     <div class="container">
         <h1><a class="main" href="https://pngwnc51.github.io/index.html">pngwnc51</a></h1>
-        <h2>Some info about my games</h2>
-        <a href="https://pngwnc51.github.io/pewa/pewa.html">Pewa</a>
+        <h2>Pewa</h2>
+        <a href="https://pngwnc51.github.io/pewa/privacy-policy.html" style="display: block;">Privacy Policy</a>
+        <a href="https://pngwnc51.github.io/pewa/terms-conditions.html" style="display: block;">Terms & Conditions</a>
+        <a href="https://docs.cocos2d-x.org/api-ref/cplusplus/V4.0/" style="display: block;">Cocos2d-x License</a>
+        <a href="https://pngwnc51.github.io/pewa/font-license.txt" style="display: block;">Font License</a>
     </div>
 </body>
 </html>
