pewa screenshots added

--- a/pewa/pewa.html
+++ b/pewa/pewa.html
@@ -2,8 +2,8 @@
 <head>
     <style>
         body {
-            background-color: black;
-            color: white;
+            background-color: white;
+            color: black;
             text-align: left;
             width: 75%;
             margin: 0 auto;
@@ -12,7 +12,7 @@
         h1 {
             font-family: Arial, sans-serif;
             font-size: 80px;
-            color: white;
+            color: black;
             text-align: left;
         }
         h2 {
@@ -24,8 +24,16 @@
             font-size: 28px;
         }
         .main {
-            color: white;
+            color: black;
             text-decoration: none;
+        }
+        .screenshot-container {
+        display: flex;
+        justify-content: space-between;
+        }
+        .screenshot {
+        width: 15%;
+        height: auto;
         }
     </style>
 </head>
@@ -37,6 +45,13 @@
         <a href="https://pngwnc51.github.io/pewa/terms-conditions.html" style="display: block;">Terms & Conditions</a>
         <a href="https://docs.cocos2d-x.org/api-ref/cplusplus/V4.0/" style="display: block;">Cocos2d-x License</a>
         <a href="https://pngwnc51.github.io/pewa/font-license.txt" style="display: block;">Font License</a>
+    </div>
+    <div class="screenshot-container">
+        <img src="screenshot1.png" alt="Screenshot 1" class="screenshot">
+        <img src="screenshot2.png" alt="Screenshot 2" class="screenshot">
+        <img src="screenshot3.png" alt="Screenshot 3" class="screenshot">
+        <img src="screenshot4.png" alt="Screenshot 4" class="screenshot">
+        <img src="screenshot5.png" alt="Screenshot 5" class="screenshot">
     </div>
 </body>
 </html>
